lib/Infero.h


typedef void (*SpeechWordCallback)(const wchar_t* AWord,
  const wchar_t* AText, const void* AUserData);
typedef bool (*InferenceCancelCallback)(const void* AUserData);
typedef void (*InferenceTokenCallback)(const wchar_t* AToken,
  const void* AUserData);
typedef void (*InfoCallback)(int ALevel, const wchar_t* AText,
  const void* AUserData);
typedef bool (*LoadModelProgressCallback)(const wchar_t* AModelName,
  float AProgress, const void* AUserData);
typedef void (*LoadModelCallback)(const wchar_t* AModelName, bool ASuccess,
  const void* AUserData);
typedef void (*InferenceStartCallback)(const void* AUserData);
typedef void (*InferenceEndCallback)(const void* AUserData);
void Print(const wchar_t* AText, int AColor, ...);
void PrintLn(const wchar_t* AText, int AColor, ...);
void GetCursorPos(int* X, int* Y);
void SetCursorPos(int X, int Y);
void ClearConsole();
void ClearConsoleLine(int AColor);
void ClearKeyStates();
bool IsKeyPressed(unsigned char AKey);
bool WasKeyReleased(unsigned char AKey);
bool WasKeyPressed(unsigned char AKey);
void Pause(bool AForcePause=true, int AColor=FG_WHITE,
  const wchar_t* AText=NULL);
void ProcessMessages();
wchar_t* MaskFirstFoundWord(const wchar_t* AText, const wchar_t* AWord);
void SetTokenResponseRightMargin(int AMargin);
int AddTokenResponseToken(const wchar_t* AToken);
wchar_t* LastTokenResponseWord(bool ATrimLeft);
bool FinalizeTokenResponse();
void SetSpeechWordCallback(SpeechWordCallback AHandler,
  const void* AUserData);
SpeechWordCallback GetSpeechWordCallback();
int GetSpeechVoiceCount();
wchar_t* GetSpeechVoiceAttribute(int AIndex, unsigned char AAttribute);
void ChangeSpeechVoice(int AIndex);
int GetSpeechVoice();
void SetSpeechVolume(float AVolume);
float GetSpeechVolume();
void SetSpeechRate(float ARate);
float GetSpeechRate();
void ClearSpeech();
void SaySpeech(const wchar_t* AText, bool APurge);
bool IsSpeechActive();
void PauseSpeech();
void ResumeSpeech();
void ResetSpeech();
void SubstituteSpeechWord(const wchar_t* AWord,
  const wchar_t* ASubstituteWord);
const wchar_t* GetVersionInfo(unsigned char AType);
void ClearError();
void SetError(const wchar_t* AText);
const wchar_t* GetError();
InferenceCancelCallback GetInferenceCancelCallback();
void SetInferenceCancelCallback(InferenceCancelCallback AHandler,
  const void* AUserData);
InferenceTokenCallback GetInferenceTokenCallback();
void SetInferenceTokenlCallback(InferenceTokenCallback AHandler,
  const void* AUserData);
InfoCallback GetInfoCallback();
void SetInfoCallback(InfoCallback AHandler, const void* AUserData);
LoadModelProgressCallback GetLoadModelProgressCallback();
void SetLoadModelProgressCallback(LoadModelProgressCallback AHandler,
  const void* AUserData);
LoadModelCallback GetLoadModelCallback();
void SetLoadModelCallback(LoadModelCallback AHandler,
  const void* AUserData);
InferenceStartCallback GetInferenceStartCallback();
void SetInferenceStartCallback(InferenceStartCallback AHandler,
  const void* AUserData);
InferenceEndCallback GetInferenceEndCallback();
void SetInferenceEndCallback(InferenceEndCallback AHandler,
  const void* AUserData);
void InitConfig(const wchar_t* AModelPath, int ANumGPULayers);
bool SaveConfig(const wchar_t* AFilename);
bool LoadConfig(const wchar_t* AFilename);
void ClearAllMessages();
int AddMessage(const wchar_t* ARole, const wchar_t* AContent);
const wchar_t* GetLastUserMessage();
const wchar_t* BuildMessageInferencePrompt(const wchar_t* AModelName);
void ClearModelDefines();
int DefineModel(const wchar_t* AModelFilename, const wchar_t* AModelName,
  unsigned int AMaxContext, const wchar_t* ATemplate,
  const wchar_t* ATemplateEnd);
bool SaveModelDefines(const wchar_t* AFilename);
bool LoadModelDefines(const wchar_t* AFilename);
bool LoadModel(const wchar_t* AModelName);
bool IsModelLoaded();
void UnloadModel();
bool RunInference(const wchar_t* AModelName, unsigned int AMaxTokens);
const wchar_t* GetInferenceResponse();
void GetInferenceStats(float* ATokenInputSpeed, float* ATokenOutputSpeed,
  int* AInputTokens, int* AOutputTokens, int* ATotalTokens);